[gd_scene load_steps=41 format=2]

[ext_resource path="res://tile_set.tres" type="TileSet" id=1]
[ext_resource path="res://hero.tscn" type="PackedScene" id=2]
[ext_resource path="res://ASSETS/sprites/grass/grass_2.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/sprites/grass/grass_4.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/sprites/grass/grass_3.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/sprites/grass/grass_1.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/sprites/grass/grass_5.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/sprites/grass/grass_6.png" type="Texture" id=8]
[ext_resource path="res://ASSETS/sprites/grass/grass_7.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/sprites/небо.png" type="Texture" id=10]
[ext_resource path="res://ASSETS/sprites/горы.png" type="Texture" id=11]
[ext_resource path="res://ASSETS/sprites/background/clouds.png" type="Texture" id=12]
[ext_resource path="res://diamond.tscn" type="PackedScene" id=13]
[ext_resource path="res://ASSETS/sprites/diamonds/diamond_1.png" type="Texture" id=14]
[ext_resource path="res://ASSETS/sprites/Platformer12-HUD-coin-font/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://HUD.gd" type="Script" id=16]
[ext_resource path="res://enemy.tscn" type="PackedScene" id=17]
[ext_resource path="res://ASSETS/soundsandmusic/music/Retro Beat.ogg" type="AudioStream" id=18]
[ext_resource path="res://ASSETS/objects/platformer-p15-assets/ladder_sprites/ladder_mid.png" type="Texture" id=19]
[ext_resource path="res://ASSETS/objects/platformer-p15-assets/ladder_sprites/ladder_top.png" type="Texture" id=20]
[ext_resource path="res://ladderTop.tscn" type="PackedScene" id=21]
[ext_resource path="res://ASSETS/sprites/G22-HUD-Hearts/hud_heartFull.png" type="Texture" id=22]
[ext_resource path="res://ASSETS/sprites/G22-HUD-Hearts/hud_heartEmpty.png" type="Texture" id=23]
[ext_resource path="res://red_blocks_tileset.tres" type="TileSet" id=24]
[ext_resource path="res://ButtonRed.tscn" type="PackedScene" id=25]
[ext_resource path="res://tilesEmpty.gd" type="Script" id=26]
[ext_resource path="res://tilesSolid.gd" type="Script" id=27]
[ext_resource path="res://key.tscn" type="PackedScene" id=28]
[ext_resource path="res://ASSETS/objects/Platformer-25-Assets/hudKey_yellow_empty.png" type="Texture" id=29]
[ext_resource path="res://door.tscn" type="PackedScene" id=30]

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 64, 0, 48, 32, 0, 64, 0, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 64, 0, 64, 64, 16, 32, 0, 0, 0, 0 )

[sub_resource type="TileSet" id=1]
0/name = "topMid_1Way"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 13 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "topL"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 11 )
1/shape_one_way = true
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "topRight_1way"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 12 )
2/shape_one_way = true
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "grass_4.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "grass_5.png 4"
4/texture = ExtResource( 7 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "grass_6.png 5"
5/texture = ExtResource( 8 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "grass_7.png 6"
6/texture = ExtResource( 9 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "topMid_pass"
7/texture = ExtResource( 6 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 48, 64, 16, 64, 16, 0, 48, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 48, 64, 16, 64, 16, 0, 48, 0 )

[sub_resource type="TileSet" id=7]
1/name = "ladder_mid.png 1"
1/texture = ExtResource( 19 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 8 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "ladder_top.png 2"
2/texture = ExtResource( 20 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 9 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1860, 82.5 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.298039 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0.337255, 0.388235, 0.407843, 0.6 )
shadow_size = 5

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 15 )

[node name="level_1" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 640, 640 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/sky"]
position = Vector2( -262, -480 )
scale = Vector2( 0.947396, 1.06019 )
texture = ExtResource( 10 )
centered = false

[node name="clouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 900, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/clouds"]
position = Vector2( -7, -168 )
texture = ExtResource( 12 )
centered = false

[node name="mountains" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 3.05176e-05, -3.05176e-05 )
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/mountains"]
position = Vector2( -10, -620 )
scale = Vector2( 1, 1.21944 )
texture = ExtResource( 11 )
centered = false

[node name="tiles one way" type="TileMap" parent="." groups=["one_way"]]
tile_set = SubResource( 1 )
show_collision = true
collision_layer = 2
collision_mask = 49
format = 1
tile_data = PoolIntArray( -458731, 3, 0, -458730, 3, 0, -458729, 3, 0, -458728, 3, 0, -458727, 3, 0, -458726, 3, 0, -458725, 3, 0, -458724, 3, 0, -393169, 0, 0, -393168, 7, 0, -393167, 0, 0, -131039, 2, 0, -131038, 0, 0, -131037, 0, 0, -131036, 1, 0, -65502, 5, 0, -65501, 4, 0, 34, 5, 0, 35, 4, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65570, 5, 0, 65571, 4, 0, 131106, 5, 0, 131107, 4, 0, 196642, 5, 0, 196643, 4, 0, 393239, 2, 0, 393240, 0, 0, 393241, 0, 0, 393242, 1, 0, 458776, 5, 0, 458777, 4, 0 )

[node name="tiles one way2" type="TileMap" parent="." groups=["one_way"]]
modulate = Color( 0.411765, 0.054902, 0.054902, 1 )
tile_set = SubResource( 1 )
show_collision = true
collision_layer = 2
collision_mask = 49
format = 1
tile_data = PoolIntArray( -458731, 3, 0, -458730, 3, 0, -458729, 3, 0, -458728, 3, 0, -458727, 3, 0, -458726, 3, 0, -458725, 3, 0, -458724, 3, 0, -393169, 0, 0, -393168, 7, 0, -393167, 0, 0, -131039, 2, 0, -131038, 0, 0, -131037, 0, 0, -131036, 1, 0, -65502, 5, 0, -65501, 4, 0, 34, 5, 0, 35, 4, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65570, 5, 0, 65571, 4, 0, 131106, 5, 0, 131107, 4, 0, 196642, 5, 0, 196643, 4, 0, 393239, 2, 0, 393240, 0, 0, 393241, 0, 0, 393242, 1, 0, 458776, 5, 0, 458777, 4, 0 )

[node name="tiles solid2" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
collision_layer = 2
collision_mask = 49
format = 1
tile_data = PoolIntArray( -1310656, 5, 0, -1245120, 5, 0, -1179584, 5, 0, -1114048, 5, 0, -1048512, 5, 0, -982976, 5, 0, -917440, 5, 0, -851904, 5, 0, -786432, 4, 0, -786368, 5, 0, -720896, 4, 0, -720832, 5, 0, -655360, 4, 0, -655296, 5, 0, -589824, 4, 0, -589760, 5, 0, -524288, 4, 0, -524224, 5, 0, -458752, 4, 0, -458739, 2, 0, -458738, 0, 0, -458737, 0, 0, -458688, 5, 0, -393216, 4, 0, -393201, 3, 0, -393180, 2, 0, -393179, 0, 0, -393178, 0, 0, -393177, 0, 0, -393176, 0, 0, -393175, 0, 0, -393174, 0, 0, -393173, 0, 0, -393172, 0, 0, -393171, 0, 0, -393170, 0, 0, -393166, 1, 0, -393158, 2, 0, -393157, 0, 0, -393156, 0, 0, -393155, 0, 0, -393154, 0, 0, -393153, 0, 0, -393152, 5, 0, -327680, 4, 0, -327674, 2, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 1, 0, -327665, 3, 0, -327616, 5, 0, -262144, 4, 0, -262129, 3, 0, -262126, 0, 0, -262125, 0, 0, -262124, 0, 0, -262123, 0, 0, -262122, 1, 0, -262080, 5, 0, -196608, 4, 0, -196593, 3, 0, -196590, 3, 0, -196544, 5, 0, -131072, 4, 0, -131070, 2, 0, -131069, 1, 0, -131057, 3, 0, -131054, 3, 0, -131047, 2, 0, -131046, 0, 0, -131045, 1, 0, -131008, 5, 0, -65536, 4, 0, -65521, 3, 0, -65518, 3, 0, -65508, 2, 0, -65507, 1, 0, -65472, 5, 0, 0, 4, 0, 6, 2, 0, 7, 0, 0, 8, 0, 0, 9, 1, 0, 15, 3, 0, 18, 3, 0, 52, 2, 0, 53, 0, 0, 54, 1, 0, 58, 2, 0, 59, 0, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 64, 5, 0, 65536, 4, 0, 65554, 3, 0, 65595, 5, 0, 65596, 3, 0, 65597, 3, 0, 65598, 3, 0, 65599, 3, 0, 65600, 5, 0, 131072, 4, 0, 131090, 3, 0, 131102, 2, 0, 131103, 1, 0, 131117, 2, 0, 131118, 0, 0, 131119, 0, 0, 131120, 0, 0, 131121, 1, 0, 131131, 5, 0, 131132, 3, 0, 131133, 3, 0, 131134, 3, 0, 131135, 3, 0, 131136, 5, 0, 196608, 4, 0, 196620, 2, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 3, 0, 196667, 5, 0, 196668, 3, 0, 196669, 3, 0, 196670, 3, 0, 196671, 3, 0, 196672, 5, 0, 262144, 4, 0, 262157, 5, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 4, 0, 262162, 3, 0, 262177, 2, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262182, 0, 0, 262183, 0, 0, 262184, 0, 0, 262185, 0, 0, 262186, 0, 0, 262187, 1, 0, 262203, 5, 0, 262204, 3, 0, 262205, 3, 0, 262206, 3, 0, 262207, 3, 0, 262208, 5, 0, 327680, 4, 0, 327686, 2, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 1, 0, 327693, 5, 0, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 4, 0, 327698, 3, 0, 327708, 2, 0, 327709, 1, 0, 327714, 5, 0, 327715, 3, 0, 327716, 3, 0, 327717, 3, 0, 327718, 3, 0, 327719, 3, 0, 327720, 3, 0, 327721, 3, 0, 327722, 4, 0, 327739, 5, 0, 327740, 3, 0, 327741, 3, 0, 327742, 3, 0, 327743, 3, 0, 393216, 4, 0, 393223, 5, 0, 393224, 3, 0, 393225, 3, 0, 393226, 4, 0, 393229, 5, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393233, 4, 0, 393234, 0, 0, 393235, 0, 0, 393236, 1, 0, 393250, 5, 0, 393251, 3, 0, 393252, 3, 0, 393253, 3, 0, 393254, 3, 0, 393255, 3, 0, 393256, 3, 0, 393257, 3, 0, 393258, 4, 0, 393275, 5, 0, 393276, 3, 0, 393277, 3, 0, 393278, 3, 0, 393279, 3, 0, 458752, 4, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 1, 0, 458759, 5, 0, 458760, 3, 0, 458761, 3, 0, 458762, 4, 0, 458765, 5, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 4, 0, 458770, 1073741827, 0, 458771, 4, 0, 458786, 5, 0, 458787, 3, 0, 458788, 3, 0, 458789, 3, 0, 458790, 3, 0, 458791, 3, 0, 458792, 3, 0, 458793, 3, 0, 458794, 4, 0, 458811, 5, 0, 458812, 3, 0, 458813, 3, 0, 458814, 3, 0, 458815, 3, 0, 589823, 4, 0, 524288, 4, 0, 524289, 3, 0, 524290, 3, 0, 524291, 4, 0, 524295, 5, 0, 524296, 3, 0, 524297, 3, 0, 524298, 4, 0, 524301, 5, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 4, 0, 524306, 1073741827, 0, 524307, 4, 0, 524311, 2, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 1, 0, 524322, 5, 0, 524323, 3, 0, 524324, 3, 0, 524325, 3, 0, 524326, 3, 0, 524327, 3, 0, 524328, 3, 0, 524329, 3, 0, 524330, 4, 0, 524347, 5, 0, 524348, 3, 0, 524349, 3, 0, 524350, 3, 0, 524351, 3, 0, 655359, 4, 0, 589824, 4, 0, 589825, 3, 0, 589826, 3, 0, 589827, 4, 0, 589831, 5, 0, 589832, 3, 0, 589833, 3, 0, 589834, 4, 0, 589837, 5, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 4, 0, 589842, 1073741827, 0, 589843, 4, 0, 589848, 5, 0, 589849, 3, 0, 589850, 4, 0, 589858, 5, 0, 589859, 3, 0, 589860, 3, 0, 589861, 3, 0, 589862, 3, 0, 589863, 3, 0, 589864, 3, 0, 589865, 3, 0, 589866, 4, 0, 589883, 5, 0, 589884, 3, 0, 589885, 3, 0, 589886, 3, 0, 589887, 3, 0, 720895, 4, 0, 655360, 4, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655367, 5, 0, 655368, 3, 0, 655369, 3, 0, 655370, 4, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 4, 0, 655378, 1073741827, 0, 655379, 4, 0, 655384, 5, 0, 655385, 3, 0, 655386, 4, 0, 655394, 5, 0, 655395, 3, 0, 655396, 3, 0, 655397, 3, 0, 655398, 3, 0, 655399, 3, 0, 655400, 3, 0, 655401, 3, 0, 655402, 4, 0, 655419, 5, 0, 655420, 3, 0, 655421, 3, 0, 655422, 3, 0, 655423, 3, 0, 720955, 5, 0, 720956, 3, 0, 720957, 3, 0, 720958, 3, 0, 720959, 3, 0 )

[node name="tiles_ladders" type="TileMap" parent="."]
tile_set = SubResource( 7 )
show_collision = true
collision_layer = 64
collision_mask = 0
format = 1
tile_data = PoolIntArray( -393168, 2, 0, -327632, 1, 0, -262096, 1, 0, -196560, 1, 0, -131024, 1, 0, -65488, 1, 0, 48, 1, 0, 65584, 1, 0 )

[node name="tilesRedEmpty" type="TileMap" parent="."]
tile_set = ExtResource( 24 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -393165, 0, 0, -393164, 0, 0, -393163, 0, 0, -393162, 0, 0, -393161, 0, 0, -393160, 0, 0, -393159, 0, 0 )
script = ExtResource( 26 )

[node name="tilesRedSolid" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 24 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -393165, 1, 0, -393164, 1, 0, -393163, 1, 0, -393162, 1, 0, -393161, 1, 0, -393160, 1, 0, -393159, 1, 0 )
script = ExtResource( 27 )

[node name="doors" type="Node2D" parent="."]

[node name="door" parent="doors" instance=ExtResource( 30 )]
position = Vector2( 2487, -424 )
target = NodePath("../door2")
hud = NodePath("../../HUD")

[node name="door2" parent="doors" instance=ExtResource( 30 )]
position = Vector2( 3952, -40 )
target = NodePath("../door")
hud = NodePath("../../HUD")

[node name="key" parent="." instance=ExtResource( 28 )]
position = Vector2( 3824, -440 )
hud = NodePath("../HUD")

[node name="ButtonRed" parent="." instance=ExtResource( 25 )]
position = Vector2( 2768, -383 )

[node name="ladderTops" type="Node2D" parent="."]

[node name="ladderTop" parent="ladderTops" instance=ExtResource( 21 )]

[node name="fallzone" type="Area2D" parent="."]
position = Vector2( 196, 800 )
collision_layer = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="fallzone"]
position = Vector2( 1850, 72.5 )
shape = SubResource( 4 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 16 )

[node name="Panel" type="Panel" parent="HUD"]
margin_left = 50.0
margin_top = 48.0
margin_right = 426.0
margin_bottom = 116.0
custom_styles/panel = SubResource( 5 )

[node name="TextureRect" type="TextureRect" parent="HUD"]
margin_left = 59.0
margin_top = 58.0
margin_right = 109.0
margin_bottom = 108.0
texture = ExtResource( 14 )

[node name="x" type="Label" parent="HUD"]
margin_left = 106.0
margin_top = 66.0
margin_right = 164.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0.670588, 0.980392, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "x"

[node name="diamonds" type="Label" parent="HUD"]
margin_left = 128.0
margin_top = 68.0
margin_right = 186.0
margin_bottom = 116.0
custom_colors/font_color = Color( 0.670588, 0.980392, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "##"

[node name="hurtsFull" type="TextureRect" parent="HUD"]
margin_left = 249.0
margin_top = 61.0
margin_right = 409.0
margin_bottom = 105.0
texture = ExtResource( 22 )
expand = true
stretch_mode = 2

[node name="hurtsEmpty" type="TextureRect" parent="HUD"]
margin_left = 249.0
margin_top = 61.0
margin_right = 408.0
margin_bottom = 105.0
texture = ExtResource( 23 )
expand = true
stretch_mode = 2

[node name="key" type="TextureRect" parent="HUD"]
margin_left = 167.0
margin_top = 39.0
margin_right = 250.0
margin_bottom = 122.0
texture = ExtResource( 29 )
expand = true

[node name="diamonds" type="Node2D" parent="."]

[node name="diamond1" parent="diamonds" instance=ExtResource( 13 )]
position = Vector2( 576, 288 )

[node name="diamond2" parent="diamonds" instance=ExtResource( 13 )]
position = Vector2( 2240, -160 )

[node name="diamond3" parent="diamonds" instance=ExtResource( 13 )]
position = Vector2( 1248, 352 )

[node name="enemies" type="Node2D" parent="."]

[node name="enemy" parent="enemies" instance=ExtResource( 17 )]
position = Vector2( 529, -117 )

[node name="enemy2" parent="enemies" instance=ExtResource( 17 )]
position = Vector2( 554, 190 )
direction = 1

[node name="hero" parent="." instance=ExtResource( 2 )]
position = Vector2( 2679, -441 )
collision_mask = 30
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="hero"]
position = Vector2( 10, 12 )
current = true
limit_left = 64
limit_right = 4096
limit_bottom = 630
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 12.0
editor_draw_limits = true

[node name="level_1_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
autoplay = true
max_distance = 4000.0

[connection signal="buttonPushed" from="ButtonRed" to="tilesRedEmpty" method="_on_ButtonRed_buttonPushed"]
[connection signal="buttonPushed" from="ButtonRed" to="tilesRedSolid" method="_on_ButtonRed_buttonPushed"]
[connection signal="body_entered" from="fallzone" to="hero" method="_on_fallzone_body_entered"]
[connection signal="diamond_collected" from="diamonds/diamond1" to="HUD" method="_on_diamond_collected"]
[connection signal="diamond_collected" from="diamonds/diamond2" to="HUD" method="_on_diamond_collected"]
[connection signal="diamond_collected" from="diamonds/diamond3" to="HUD" method="_on_diamond_collected"]
